--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"Chrome 89"
 	],
 	"dependencies": {
-		"electron-context-menu": "^2.5.0",
+		"electron-context-menu": "^3.1.0",
 		"electron-reloader": "^1.2.1",
 		"electron-serve": "^1.1.0",
 		"electron-window-state": "^5.0.3",
@@ -32,13 +32,13 @@
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "next",
-		"@types/electron-window-state": "^2.0.34",
+		"@types/electron-window-state": "^5.0.0",
 		"@typescript-eslint/eslint-plugin": "^4.26.0",
 		"@typescript-eslint/parser": "^4.26.0",
 		"concurrently": "^6.1.0",
 		"cross-env": "^7.0.3",
-		"dotenv": "^8.6.0",
-		"electron": "^12.0.9",
+		"dotenv": "^10.0.0",
+		"electron": "^13.1.2",
 		"electron-builder": "^22.10.5",
 		"electron-connect": "^0.6.3",
 		"electron-packager": "^15.2.0",
@@ -49,13 +49,13 @@
 		"eslint-plugin-import": "^2.23.4",
 		"eslint-plugin-svelte3": "^3.2.0",
 		"npm-run-all": "^4.1.5",
+		"postcss": "^8.2.10",
+		"postcss-load-config": "^3.0.1",
 		"prettier": "^2.3.0",
 		"prettier-plugin-svelte": "^2.3.0",
-		"postcss": "^8.2.10",
 		"sass": "^1.33.0",
 		"svelte": "^3.38.2",
-		"svelte-check": "^1.5.4",
-		"vite": "^2.3.3",
-		"postcss-load-config": "^3.0.1"
+		"svelte-check": "^2.1.0",
+		"vite": "^2.3.3"
 	}
 }
