--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"eslint-config-airbnb-base": "^14.2.1",
 		"eslint-config-airbnb-typescript": "^12.3.1",
 		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
 		"eslint-plugin-svelte3": "^3.2.0",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.2.10",
