--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
 	"bracketSpacing": true,
 	"singleQuote": true,
 	"printWidth": 100,
-	"useTabs": true,
-	"tabWidth": 4,
+	"useTabs": false,
+	"tabWidth": 2,
 	"semi": true
 }
