--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-package-lock.json
-types/env.d.ts
-yarn-error.log
-pnpm-lock.yaml
-node_modules/
-.svelte-kit/
 .DS_Store
-.svelte/
-*.local
-build/
-dist/
+node_modules
+/.svelte-kit
+/package
+dist
+build
