--- a/build.config.json
+++ b/build.config.json
@@ -1,14 +1,15 @@
 {
-	"appId": "com.example.app",
-	"productName": "Svelte Electron",
-	"directories": {
-		"output": "dist"
-	},
-	"files": [
-		"src/electron.cjs",
-		{
-			"from": "build",
-			"to": ""
-		}
-	]
+  "appId": "com.example.app",
+  "productName": "Svelte Electron",
+  "extraFiles": [],
+  "directories": {
+    "output": "dist"
+  },
+  "files": [
+    "src/electron.cjs",
+    {
+      "from": "build",
+      "to": ""
+    }
+  ]
 }
