--- a/package.json
+++ b/package.json
@@ -1,67 +1,63 @@
 {
-	"name": "sveltekit-electron",
-	"version": "0.0.1",
-	"private": true,
-	"description": "Minimal Sveltekit + Electron starter template.",
-	"main": "src/electron.cjs",
-	"type": "module",
-	"author": {
-		"name": "Author Name",
-		"email": "name@email.com",
-		"url": "http://www.urlhere.com"
-	},
-	"scripts": {
-		"dev": "NODE_ENV=dev npm run dev:all",
-		"dev:all": "concurrently -n=svelte,electron -c='#ff3e00',blue \"npm run dev:svelte\" \"npm run dev:electron\"",
-		"dev:svelte": "svelte-kit dev",
-		"dev:electron": "electron src/electron.cjs",
-		"build": "cross-env NODE_ENV=production npm run build:svelte && npm run build:electron",
-		"build:svelte": "svelte-kit build",
-		"build:electron": "electron-builder -w --config build.config.json",
-		"start": "svelte-kit start"
-	},
-	"browserslist": [
-		"Chrome 89"
-	],
-	"dependencies": {
-		"electron-context-menu": "^3.1.0",
-		"electron-reloader": "^1.2.1",
-		"electron-serve": "^1.1.0",
-		"electron-window-state": "^5.0.3",
-		"@sveltejs/adapter-static": "^1.0.0-next.11",
-		"autoprefixer": "^10.2.5",
-		"cssnano": "^5.0.1",
-		"typescript": "^4.2.4",
-		"tailwindcss": "^2.1.1",
-		"svelte-preprocess": "^4.7.1"
-	},
-	"devDependencies": {
-		"@sveltejs/kit": "next",
-		"@types/electron-window-state": "^5.0.0",
-		"@typescript-eslint/eslint-plugin": "^4.26.0",
-		"@typescript-eslint/parser": "^4.26.0",
-		"concurrently": "^6.1.0",
-		"cross-env": "^7.0.3",
-		"dotenv": "^10.0.0",
-		"electron": "^13.1.2",
-		"electron-builder": "^22.10.5",
-		"electron-connect": "^0.6.3",
-		"electron-packager": "^15.2.0",
-		"electron-updater": "^4.3.9",
-		"eslint": "^7.29.0",
-		"eslint-config-airbnb-base": "^14.2.1",
-		"eslint-config-airbnb-typescript": "^12.3.1",
-		"eslint-plugin-import": "^2.23.4",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-svelte3": "^3.2.0",
-		"npm-run-all": "^4.1.5",
-		"postcss": "^8.2.10",
-		"postcss-load-config": "^3.0.1",
-		"prettier": "^2.3.0",
-		"prettier-plugin-svelte": "^2.3.0",
-		"sass": "^1.33.0",
-		"svelte": "^3.38.2",
-		"svelte-check": "^2.1.0",
-		"vite": "^2.3.3"
-	}
+  "name": "sveltekit-electron",
+  "version": "0.0.1",
+  "private": true,
+  "description": "Minimal Sveltekit + Electron starter template.",
+  "main": "src/electron.cjs",
+  "type": "module",
+  "author": {
+    "name": "Author Name",
+    "email": "name@email.com",
+    "url": "http://www.urlhere.com"
+  },
+  "scripts": {
+    "dev": "cross-env NODE_ENV=dev npm run dev:all",
+    "dev:all": "concurrently -n=svelte,electron -c='#ff3e00',blue \"npm run dev:svelte\" \"npm run dev:electron\"",
+    "dev:svelte": "svelte-kit dev",
+    "dev:electron": "electron src/electron.cjs",
+    "build": "cross-env NODE_ENV=production npm run build:svelte && npm run build:electron",
+    "build:svelte": "svelte-kit build",
+    "build:electron": "electron-builder -w --config build.config.json",
+    "start": "svelte-kit start",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "lint": "prettier --check --plugin-search-dir=. . && eslint .",
+    "format": "prettier --write --plugin-search-dir=. .",
+    "postinstall": "electron-builder install-app-deps"
+  },
+  "browserslist": [
+    "Chrome 89"
+  ],
+  "dependencies": {
+    "electron-context-menu": "^3.1.0",
+    "electron-serve": "^1.1.0",
+    "electron-window-state": "^5.0.3"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-static": "^1.0.0-next.13",
+    "@sveltejs/kit": "next",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "autoprefixer": "^10.2.5",
+    "concurrently": "^6.1.0",
+    "cross-env": "^7.0.3",
+    "cssnano": "^5.0.1",
+    "electron": "^13.1.2",
+    "electron-builder": "^22.10.5",
+    "electron-connect": "^0.6.3",
+    "electron-packager": "^15.2.0",
+    "electron-reloader": "^1.2.1",
+    "electron-updater": "^4.3.9",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-svelte3": "^3.2.0",
+    "postcss": "^8.2.10",
+    "postcss-load-config": "^3.0.1",
+    "prettier": "^2.3.0",
+    "prettier-plugin-svelte": "^2.3.0",
+    "svelte": "^3.38.2",
+    "svelte-check": "^2.1.0",
+    "typescript": "^4.2.4",
+    "tailwindcss": "^2.1.1",
+    "svelte-preprocess": "^4.7.1"
+  }
 }
