--- a/package.json
+++ b/package.json
@@ -28,36 +28,36 @@
     "Chrome 89"
   ],
   "dependencies": {
-    "electron-context-menu": "^3.1.0",
+    "electron-context-menu": "^3.1.2",
     "electron-serve": "^1.1.0",
     "electron-window-state": "^5.0.3"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.13",
     "@sveltejs/kit": "next",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "autoprefixer": "^10.2.5",
-    "concurrently": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "autoprefixer": "^10.4.4",
+    "concurrently": "^6.5.1",
     "cross-env": "^7.0.3",
-    "cssnano": "^5.0.1",
+    "cssnano": "^5.1.7",
     "electron": "^18.0.0",
     "electron-builder": "^23.0.3",
     "electron-connect": "^0.6.3",
-    "electron-packager": "^15.2.0",
-    "electron-reloader": "^1.2.1",
-    "electron-updater": "^4.3.9",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-svelte3": "^3.2.0",
-    "postcss": "^8.2.10",
-    "postcss-load-config": "^3.0.1",
-    "prettier": "^2.3.0",
-    "prettier-plugin-svelte": "^2.3.0",
-    "svelte": "^3.38.2",
-    "svelte-check": "^2.1.0",
-    "typescript": "^4.2.4",
-    "tailwindcss": "^2.1.1",
-    "svelte-preprocess": "^4.7.1"
+    "electron-packager": "^15.4.0",
+    "electron-reloader": "^1.2.3",
+    "electron-updater": "^4.6.5",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte3": "^3.4.1",
+    "postcss": "^8.4.12",
+    "postcss-load-config": "^3.1.4",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
+    "svelte": "^3.47.0",
+    "svelte-check": "^2.7.0",
+    "svelte-preprocess": "^4.10.6",
+    "tailwindcss": "^2.2.19",
+    "typescript": "^4.6.3"
   }
 }
